finishes logout api
